# agent-telepathy

./: .gitignore  .trivyignore  CHANGELOG.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml
.github/workflows/: ci-go.yml  ci-java.yml  ci-rust.yml  ci.yml  publish-java.yml  publish-npm.yml  publish-python.yml  publish-rust.yml  security.yml
docs/superpowers/plans/: 2026-03-17-tpcp-full-audit-remediation.md
integrations/: README.md  docker-compose.yml
integrations/aura-bridge/: README.md  aura_tpcp_bridge.py  example_usage.py  requirements.txt  schemas.py
integrations/paperclip-bridge/: Dockerfile  README.md  package-lock.json  package.json
integrations/paperclip-bridge/src/: OllamaAdapter.ts  PaperclipTPCPBridge.ts  config.ts  index.ts  schemas.ts
integrations/shared/: schemas.json  service-types.json
integrations/xyops-bridge/: Dockerfile  README.md  package.json
integrations/xyops-bridge/plugin/: tpcp-notify.js
integrations/xyops-bridge/src/: XyopsTPCPBridge.ts  config.ts  index.ts  schemas.ts
k8s/: Dockerfile.relay  README.md  namespace.yaml
k8s/ingress/: certificate.yaml  ingress.yaml
k8s/redis/: networkpolicy.yaml  pdb.yaml  secret.yaml  service.yaml  statefulset.yaml
k8s/relay/: configmap.yaml  deployment.yaml  hpa.yaml  networkpolicy.yaml  pdb.yaml  service.yaml  serviceaccount.yaml
skills/openclaw-tpcp/: SKILL.md  package.json
skills/openclaw-tpcp/lib/: agent.js
tpcp/: .gitignore  Dockerfile  README.md  add_headers.py  pyproject.toml
tpcp-go/: README.md  go.mod
tpcp-go/examples/hello/: main.go
tpcp-go/tpcp/: dlq.go  identity.go  lwwmap.go  node.go  schema.go  tpcp_test.go  util.go
tpcp-java/: README.md  pom.xml
tpcp-java/src/main/java/io/tpcp/: Constants.java
tpcp-java/src/main/java/io/tpcp/core/: DLQ.java  IdentityManager.java  LWWMap.java  TPCPNode.java
tpcp-java/src/main/java/io/tpcp/schema/: AckInfo.java  AgentIdentity.java  AudioPayload.java  BinaryPayload.java  CRDTSyncPayload.java  ChunkInfo.java  ImagePayload.java  Intent.java  MessageHeader.java  TPCPEnvelope.java  TelemetryPayload.java  TelemetryReading.java  TextPayload.java  VectorEmbeddingPayload.java  VideoPayload.java
tpcp-java/src/test/java/io/tpcp/: IdentityTest.java  LWWMapTest.java  PayloadValidationTest.java  SchemaTest.java
tpcp-java/src/test/java/io/tpcp/core/: DLQTest.java  TPCPNodeTest.java
tpcp-rs/: Cargo.toml  README.md
tpcp-rs/tpcp-core/: Cargo.toml
tpcp-rs/tpcp-core/src/: identity.rs  lib.rs  lwwmap.rs  schema.rs
tpcp-rs/tpcp-std/: Cargo.toml
tpcp-rs/tpcp-std/examples/: hello.rs
tpcp-rs/tpcp-std/src/: dlq.rs  lib.rs  node.rs
tpcp-ts/: .gitignore  README.md  build_errors.txt  package-lock.json  package.json
tpcp-ts/src/: browser.ts  index.ts
tpcp-ts/src/core/: node.ts  relay_node.ts
tpcp-ts/src/memory/: crdt.ts
tpcp-ts/src/schemas/: envelope.ts
tpcp-ts/src/security/: crypto.ts
tpcp-ts/src/transport/: index.ts  websocket-factory.ts
tpcp-ts/tests/: browser-entry.test.ts  crdt.test.ts  cross_language.test.ts  crypto.test.ts  generate_fixture.py  node.test.ts  schema.test.ts
tpcp/docs/: RFC-001-Core-Protocol.md  api_reference.md  architecture.md  universal_edge.md
tpcp/examples/: 01_handshake_demo.py  02_shared_memory_demo.py  03_telepathy_demo.py
tpcp/proto/: tpcp.proto  tpcp.schema.json
tpcp/tests/: test_adapters.py  test_canbus_adapter.py  test_crypto_canonical.py  test_homeassistant_adapter.py  test_integration.py  test_mock_node.py  test_modbus_adapter.py  test_node.py  test_opcua_adapter.py  test_queue.py  test_relay_server.py  test_schemas.py  test_security.py  test_vector.py
tpcp/tpcp/: __init__.py
tpcp/tpcp/adapters/: __init__.py  autogen_adapter.py  base.py  canbus_adapter.py  crewai_adapter.py  haystack_adapter.py  homeassistant_adapter.py  langgraph_adapter.py  llamaindex_adapter.py  modbus_adapter.py  mqtt_adapter.py  opcua_adapter.py  openai_agents_adapter.py  pydantic_ai_adapter.py  ros2_adapter.py  semantic_kernel_adapter.py  smolagents_adapter.py
tpcp/tpcp/cli/: main.py
tpcp/tpcp/cli/commands/: inspect.py  keygen.py  listen.py  ping.py  send.py
tpcp/tpcp/core/: __init__.py  chunker.py  node.py  queue.py  reassembler.py  relay_client.py
tpcp/tpcp/memory/: __init__.py  crdt.py  vector.py
tpcp/tpcp/relay/: __init__.py  server.py  webhook.py
tpcp/tpcp/schemas/: __init__.py  envelope.py
tpcp/tpcp/security/: __init__.py  acl.py  crypto.py
tpcp/tpcp/testing/: __init__.py  mock_node.py
tpcp/tpcp/transport/: __init__.py
