[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tpcp-core"
version = "0.3.0"
description = "Telepathy Communication Protocol - A framework-agnostic communication protocol for autonomous agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }
authors = [
    { name = "Principal Systems Architect" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Topic :: Communications",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "pydantic>=2.5.0",
    "websockets>=12.0",
    "httpx>=0.27.0",
    "cryptography>=42.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.2.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0"
]
edge = [
    "paho-mqtt>=2.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "aiohttp>=3.9.3"
]

[tool.hatch.build.targets.wheel]
packages = ["tpcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
