[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tpcp-core"
version = "0.4.0"
description = "Telepathy Communication Protocol - A framework-agnostic communication protocol for autonomous agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }
authors = [
    { name = "TPCP Contributors", email = "tpcp@protonmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Framework :: AsyncIO",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Topic :: Communications",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "pydantic>=2.5.0",
    "websockets>=12.0",
    "httpx>=0.27.0",
    "cryptography>=42.0.0",
    "aiosqlite>=0.20.0",
    "click>=8.0.0"
]

[project.scripts]
tpcp = "tpcp.cli.main:cli"

[project.urls]
Homepage = "https://github.com/tpcp-protocol/tpcp"
Repository = "https://github.com/tpcp-protocol/tpcp"
Documentation = "https://github.com/tpcp-protocol/tpcp/blob/main/tpcp/docs/api_reference.md"
"Bug Tracker" = "https://github.com/tpcp-protocol/tpcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=0.5.0",
    "black>=24.2.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0"
]
edge = [
    "paho-mqtt>=2.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "aiohttp>=3.9.3"
]
industrial = [
    "asyncua>=1.1.0",
    "pymodbus>=3.6.0",
    "python-can>=4.3.0",
]
ai-frameworks = [
    "autogen-agentchat>=0.4.0",
    "pydantic-ai>=0.0.14",
    "smolagents>=1.0.0",
    "openai>=1.0.0",
    "llama-index>=0.10.0",
    "haystack-ai>=2.0.0",
    "semantic-kernel>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["tpcp"]

[tool.mypy]
ignore_missing_imports = true
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = ["websockets.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["tpcp.core.node", "tpcp.relay.server", "tpcp.relay.webhook"]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "tpcp.adapters.mqtt_adapter",
    "tpcp.adapters.homeassistant_adapter",
    "tpcp.adapters.modbus_adapter",
    "tpcp.adapters.canbus_adapter",
    "tpcp.adapters.ros2_adapter",
]
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
