[package]
name = "tpcp-core"
version = "0.4.0"
edition = "2021"
description = "no_std-compatible TPCP core types and cryptography"
license = "AGPL-3.0"

[dependencies]
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
ed25519-dalek = { version = "2", default-features = false, features = ["alloc"] }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }

[features]
default = ["std"]
std = ["serde/std", "serde_json/std", "ed25519-dalek/std"]
